--- a/WebShop/ClientApp/src/index.html
+++ b/WebShop/ClientApp/src/index.html
@@ -11,4 +11,5 @@
   <body>
     <app-root>Loading...</app-root>
   </body>
+  <script src="https://kit.fontawesome.com/64e78f2d6a.js" crossorigin="anonymous"></script>
 </html>
